--- a/config/database.yml
+++ b/config/database.yml
@@ -24,8 +24,8 @@ default: &default
 development:
   <<: *default
   database: Snag_development
-  user: patsantucci
-  password: 517Summit
+  user: Snag
+  password: snagabeer
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
@@ -60,8 +60,8 @@ development:
 test:
   <<: *default
   database: Snag_test
-  user: patsantucci
-  password: 517Summit
+  user: Snag
+  password: snagabeer
 
 # As with config/secrets.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
